finished landing, with transformations, positioning and svg sprite

--- a/Module-6/index.html
+++ b/Module-6/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300i,400|Kaushan+Script|Montserrat:400,700" rel="stylesheet"> 
+    <title>Homework 6</title>
 </head>
 <body>
     <header class="header">
         <img src="./img/header-logo.png" alt="" class="header-logo">
         <ul class="menu">
-            <li class="menu-item">About</li>
-            <li class="menu-item">Service</li>
-            <li class="menu-item">Work</li>
-            <li class="menu-item">Blog</li>
-            <li class="menu-item">Contact</li>
+            <li class="menu-item"><a href="#">About</a></li>
+            <li class="menu-item"><a href="#">Service</a></li>
+            <li class="menu-item"><a href="#">Work</a></li>
+            <li class="menu-item"><a href="#">Blog</a></li>
+            <li class="menu-item"><a href="#">Contact</a></li>
         </ul>
     </header>
     <main class="main">
@@ -77,6 +78,83 @@
                 </div>
             </li>
         </ul>
+        <p class="title-before__second">Who we are</p>
+        <h2 class="title">Meet our team</h2>
+        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="team">
+            <ul class="team-list">
+                <li class="team-item">
+                    <div class="img-onhover">
+                        <img src="./img/graphicDes-photo.png" alt="" class="team-img">
+                        <div class="social-list">
+                            <svg class="social-icon">
+                                <use class="facebook-icon" href="img/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-pinterest"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <h5 class="team-name">Matthew Dix</h5>
+                    <p class="team-position">Graphic Design</p>
+                </li>
+                <li class="team-item">
+                    <div class="img-onhover">
+                        <img src="./img/UXdes-photo.png" alt="" class="team-img">
+                        <div class="social-list">
+                            <svg class="social-icon">
+                                <use class="facebook-icon" href="img/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-pinterest"></use>
+                            </svg>
+                            <svg class="social-icon">
+                                <use href="img/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <h5 class="team-name">Christopher Campbell</h5>
+                    <p class="team-position">Branding/UX design</p>
+                </li>
+                <li class="team-item">
+                    <div class="img-onhover">
+                            <img src="./img/developer-photo.png" alt="" class="team-img">
+                            <div class="social-list">
+                                <svg class="social-icon">
+                                    <use class="facebook-icon" href="img/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use href="img/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use href="img/symbol-defs.svg#icon-pinterest"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use href="img/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    <h5 class="team-name">Michael Fertig </h5>
+                    <p class="team-position">Developer</p>
+                </li>
+            </ul>
+        </div>
     </main>
+    <footer class="footer">
+        <div class="footer-text">&copy; 2016 MoGo free PSD template by <a href="#" class="footer-link">Laaqiq</a></div>
+        <div class="footer-form">
+            <input type="email" name="email" id="" placeholder="Your Email...">
+            <input type="submit" value="Subscribe">
+        </div>
+    </footer>
 </body>
 </html>
