corrects img src

--- a/Module-8/index.html
+++ b/Module-8/index.html
@@ -29,7 +29,7 @@
             <ul class="partners-list">
                 <li class="partners-item">
                     <div class="partners-wrapper">
-                        <img src="./img/partners-img1@1X.png" alt="" class="partners-img" srcset="./img/partners-img1@2x.png 2x">
+                        <img src="img/partners-img1@1X.png" alt="" class="partners-img" srcset="img/partners-img1@2x.png 2x">
                         <svg class="partners-icon red-bg">
                             <use href="img/symbol-defs.svg#Shape-tv"></use>
                         </svg>
