--- a/Module-8/index.html
+++ b/Module-8/index.html
@@ -31,7 +31,7 @@
                     <div class="partners-wrapper">
                         <img src="./img/partners-img1@1X.png" alt="" class="partners-img" srcset="./img/partners-img1@2x.png 2x">
                         <svg class="partners-icon red-bg">
-                            <use href="img/symbol-defs.svg#Shape-tv"></use>
+                            <use href="./img/symbol-defs.svg#Shape-tv"></use>
                         </svg>
                     </div>
                     <h3 class="partners-name">Bradley Hunter</h3>
@@ -41,7 +41,7 @@
                     <div class="partners-wrapper">
                         <img src="./img/partners-img2@1X.png" alt="" class="partners-img" srcset="./img/partners-img2@2x.png 2x">
                         <svg class="partners-icon yellow-bg">
-                            <use href="img/symbol-defs.svg#Shape-chemistry"></use>
+                            <use href="./img/symbol-defs.svg#Shape-chemistry"></use>
                         </svg>
                     </div>
                     <h3 class="partners-name">Lucas Marsha</h3>
@@ -51,7 +51,7 @@
                     <div class="partners-wrapper">
                         <img src="./img/partners-img3@1X.png" alt="" class="partners-img" srcset="./img/partners-img3@2x.png 2x">
                         <svg class="partners-icon green-bg">
-                            <use href="img/symbol-defs.svg#Shape-coffee"></use>
+                            <use href="./img/symbol-defs.svg#Shape-coffee"></use>
                         </svg>
                     </div>
                     <h3 class="partners-name">Heather Walker</h3>
@@ -61,7 +61,7 @@
                     <div class="partners-wrapper">
                         <img src="./img/partners-img4@1X.png" alt="" class="partners-img" srcset="./img/partners-img4@2x.png 2x">
                         <svg class="partners-icon blue-bg">
-                            <use href="img/symbol-defs.svg#Shape-telegram"></use>
+                            <use href="./img/symbol-defs.svg#Shape-telegram"></use>
                         </svg>
                     </div>
                     <h3 class="partners-name">Bradley Hunter</h3>
