improved some landing design

--- a/Module-5/index.html
+++ b/Module-5/index.html
@@ -96,7 +96,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p class="footer-text">All Rights Reserved &copy; Dokan | Designed ThemenGraph</p>
+        <p class="footer-text">All Rights Reserved &copy; Dokan | Designed <span class="footer-span">ThemenGraph</span></p>
     </footer>
 </body>
 </html>
