--- a/Module-7/index.html
+++ b/Module-7/index.html
@@ -8,6 +8,59 @@
     <title>Module-7</title>
 </head>
 <body>
-    
+    <div class="hero">
+        <header class="header">
+            <img src="./img/header-logo@1X.png" alt="header logo" class="header__img">
+            <ul class="header__menu">
+                <li class="header__item"><a href="#" class="menu__link">Home</a></li>
+                <li class="header__item"><a href="#" class="menu__link">Services</a></li>
+                <li class="header__item"><a href="#" class="menu__link">Portfolio</a></li>
+                <li class="header__item"><a href="#" class="menu__link">About</a></li>
+                <li class="header__item"><a href="#" class="menu__link">Contact</a></li>
+            </ul>
+        </header>
+        <section class="services">
+            <h2 class="services__title">Services</h2>
+            <p class="services__sub">Proin iaculis purus consequat sem cure. </p>
+            <ul class="services__menu">
+                <li class="services__item">
+                    <svg class="services__icon">
+                        <use href="./img/symbol-defs.svg#icon-Basket"></use>
+                    </svg>
+                    <h4 class="services__name">E-Commerce</h4>
+                    <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="services__item">
+                    <svg class="services__icon">
+                        <use href="./img/symbol-defs.svg#icon-Laptop"></use>
+                    </svg>
+                    <h4 class="services__name">Responsive Web</h4>
+                    <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="services__item">
+                    <svg class="services__icon">
+                        <use href="./img/symbol-defs.svg#icon-Locked"></use>
+                    </svg>
+                    <h4 class="services__name">Web Security</h4>
+                    <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <section class="contacts">
+        <h2 class="contacts__title">Contact us</h2>
+        <p class="contacts__sub">Proin iaculis purus consequat sem cure. </p>
+        <form action="" class="contacts__form">
+            <div class="form__wrapper">
+                <div class="form-left">
+                    <input type="text" name="Name" required class="input-name" placeholder="Your Name *"> 
+                    <input type="email" name="Email" required class="input-email" placeholder="Your Email *">
+                    <input type="text" name="Subject" class="input-subject" placeholder="Subject">
+                </div>
+                <textarea name="Message" required class="input-message" placeholder="Your Message *"></textarea>
+            </div>
+            <input type="submit" value="Send message" class="btn" >
+        </form>
+    </section>
 </body>
 </html>
