adds styling to some text elements

--- a/Module-9/index.html
+++ b/Module-9/index.html
@@ -40,7 +40,7 @@
                     <li class="section-item col-md-5 col-lg-3">
                         <div class="img-container">
                             <img src="./img/partners-img1@1X.png" alt="" class="item-img">
-                            <svg class="img-icon">
+                            <svg class="img-icon red-bg">
                                 <use href="./img/symbol-defs.svg#Shape-tv"></use>
                             </svg>
                         </div>
@@ -50,7 +50,7 @@
                     <li class="section-item col-md-5 col-lg-3">
                         <div class="img-container">
                             <img src="./img/partners-img2@1X.png" alt="" class="item-img">
-                            <svg class="img-icon">
+                            <svg class="img-icon yellow-bg">
                                 <use href="./img/symbol-defs.svg#Shape-chemistry"></use>
                             </svg>
                         </div>
@@ -60,7 +60,7 @@
                     <li class="section-item col-md-5 col-lg-3">
                         <div class="img-container">
                             <img src="./img/partners-img3@1X.png" alt="" class="item-img">
-                            <svg class="img-icon">
+                            <svg class="img-icon green-bg">
                                 <use href="./img/symbol-defs.svg#Shape-coffee"></use>
                             </svg>
                         </div>
@@ -70,7 +70,7 @@
                     <li class="section-item col-md-5 col-lg-3">
                         <div class="img-container">
                             <img src="./img/partners-img4@1X.png" alt="" class="item-img">
-                            <svg class="img-icon">
+                            <svg class="img-icon blue-bg">
                                 <use href="./img/symbol-defs.svg#Shape-telegram"></use>
                             </svg>
                         </div>
