optimizes images, uses vendor prefixes

--- a/Module-10/index.html
+++ b/Module-10/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <header class="header">
-            <a href="#" class="header__logo--link"><img src="./img/header-logo@1X.png" alt="company logo" class="header__logo"></a>
+            <a href="#" class="header__logo--link"><img     src="./img/header-logo@1X.png" alt="company logo" class="header__logo"></a>
             <ul class="header__menu">
                 <li class="header__item"><a href="#" class="header__link">About</a></li>
                 <li class="header__item"><a href="#" class="header__link">Service</a></li>
@@ -96,7 +96,7 @@
             <ul class="team__list">
                 <li class="team__item">
                     <div class="img-onhover">
-                        <img src="./img/graphicDes-photo.png" alt="" class="team__img">
+                        <img  srcset="./img/graphicDes-photo@2X.png 2x" alt="" class="team__img">
                         <div class="social-list">
                             <svg class="social-icon">
                                 <use href="img/symbol-defs.svg#icon-facebook"></use>
@@ -117,7 +117,7 @@
                 </li>
                 <li class="team__item">
                     <div class="img-onhover">
-                        <img src="./img/UXdes-photo.png" alt="" class="team__img">
+                        <img srcset="./img/UXdes-photo@2X.png 2x" src="./img/UXdes-photo@1X.png" alt="" class="team__img">
                         <div class="social-list">
                             <svg class="social-icon">
                                 <use class="facebook-icon" href="img/symbol-defs.svg#icon-facebook"></use>
@@ -138,7 +138,7 @@
                 </li>
                 <li class="team__item">
                     <div class="img-onhover">
-                            <img src="./img/developer-photo.png" alt="" class="team__img">
+                            <img srcset="./img/developer-photo@1X.png 1X, ./img/developer-photo@2X.png 2x" src="./img/developer-photo@1X.png" alt="" class="team__img">
                             <div class="social-list">
                                 <svg class="social-icon">
                                     <use class="facebook-icon" href="img/symbol-defs.svg#icon-facebook"></use>
